@@ -1,3 +1,7 @@
+2005-12-04  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_transform.c: improve code with some symbolic names.
+
 2005-11-08  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_datums.c: Added OSGB36 transformation to list.
